--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 %openany
 
 %% rimuove workout errata dalla versione da consegnare
-\def\versione{consegna}%%VERSIONE
+\def\versione{bozza}%%VERSIONE
 \def\bozza{bozza}
 \def\consegna{consegna}
 %%%PENALITIES
@@ -100,16 +100,20 @@
 \aliaspagestyle{chapter}{plain}
 \cleartorecto
 %%Intro
-
+\begin{workout}[Meta tools]
+Errata and workout environments
+\end{workout}
 \begin{errata}[primo pianeta attorno a stella singola solare di sequenza]
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale: 
 I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Queloz 1995) erano vincolati a riprodurre le caratteristiche peculiari del sistema
 La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata sulla base dell'architettura orbitale del sistema solare e della composizione chimica solare, dei pianeti e dei corpi minori.
 \end{errata}
 
+\begin{workout}[Intro alla formazione planetaria e oggetto seminario: intro formazione sistema solare, esosistemi verso simulazioni formazione]
 % (\cite{lissauer1993planet}).
 L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene. Con l'accumularsi delle osservazioni l'ipotesi di formazione attraverso disco protoplanetario \'e stata confermata: la prima verifica a cui sono state sottoposte le teorie di formazione \'e il Sistem solare.
 A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
+\end{workout}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Vincoli ai modelli di formazione planetaria}
