--- a/usepkg.sty
+++ b/usepkg.sty
@@ -10,11 +10,17 @@
 %%%
 \usepackage[backend=biber,style=authoryear,maxcitenames=1,natbib=true]{biblatex}
 %%%
+\DeclareBibliographyDriver{book}{%
+	\printnames{author}%
+	\newunit\newblock\printfield{title}%
+	\newunit\printfield{year}%
+	\newunit\printfield{addendum}
+	\finentry}
 
 \usepackage[]{adjustbox}
 %export: Exports most keys of \adjustbox to \includegraphics so that they can be used with this macro as well.
 
-\usepackage{ebgaramond}
+%\usepackage{ebgaramond}
 %\usepackage{pxfonts}
 \usepackage[T1]{fontenc}
 
