--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -128,9 +128,9 @@ In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con d
 
 \begin{workout}[Caratteristiche fittate proto-dischi]
 \begin{table}[!ht]
-\begin{tabular}{|ccccc|}
-Nome&$M_d$&$\gamma$&$R_c$&$H_{100}\\
-AS 205&0.029&0.9&46&19.6&0.11
+\begin{tabular}{|cccccc|}
+Nome&$M_d$&$\gamma$&$R_c$&$H_{100}&\\
+AS 205&0.029&0.9&46&19.6&0.11\\
 \end{tabular}
 \end{table}
 \end{workout}
