mask addendum; inizio rilettura/riscrittura; alcuni errori corretti

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -129,7 +129,7 @@ In figura (\ref{fig:clusterage-fstar}) \'e riportata la frazione di stelle con d
 \begin{workout}[Caratteristiche fittate proto-dischi]
 \begin{table}[!ht]
 \begin{tabular}{|cccccc|}
-Nome&$M_d$&$\gamma$&$R_c$&$H_{100}&\\
+Nome&$M_d$&$\gamma$&$R_c$&$H_{100}$&\\
 AS 205&0.029&0.9&46&19.6&0.11\\
 \end{tabular}
 \end{table}
