--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,9 +3,14 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
+
+\begin{workout}[Vincoli ai modelli di formazione: sistema solare]
+Struttura e composizione pianeti: orbite su un piano quindi disco accrescimento, chiarire et\'a del sistema solare/Sole e tempi scala CA/GI; tempi scala formazione e migrazione giove saturno: late haevy bombardament. Massa minima disco protoplanetario. Modello pianeti gassosi per determinare profilo densit\'a e quindi composizione.
+\end{workout}
+
 Il sistema solare \'e il punto di partenza delle teorie di formazione planetaria. Infatti si hanno informazioni accurate sui pianeti e loro orbite e sulla popolazione di corpi minori, si hanno anche riferimenti temporali tramite analisi chimica di campioni di roccia.
 
-L'et\'a del sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} mentre l'analisi chimica dei meteoriti \SI{4.57+-0.07}{\giga\year}.
+L'et\'a del Sole \'e definita come tempo in sequenza principale; tecniche eliosismologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} mentre l'analisi chimica dei meteoriti \SI{4.57+-0.07}{\giga\year}.
 La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteoriti.
 
 \begin{figure}[!ht]
