--- a/seminario.bib
+++ b/seminario.bib
@@ -6,7 +6,8 @@
   number={2},
 pages={1282},
   year={2007},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
+  addendum={}
 }
 
 @article{mayor1995jupiter,
@@ -295,7 +296,8 @@ pages={1282},
   number={1},
   pages={3--10},
   year={2009},
-  organization={AIP}
+  organization={AIP},
+  addendum={kskljslksdkjlsdlkslkj}
 }
 
 @article{alibert2005models,
