--- a/usepkg.sty
+++ b/usepkg.sty
@@ -14,7 +14,7 @@
 \usepackage[]{adjustbox}
 %export: Exports most keys of \adjustbox to \includegraphics so that they can be used with this macro as well.
 
-\usepackage{ebgaramond}
+%\usepackage{ebgaramond}
 %\usepackage{pxfonts}
 \usepackage[T1]{fontenc}
 
