different branches different titles

--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@
 %\newcommand{\titolo}{\@title}
 %\makeatother
 \author{ }
-\title{Simulazione popolazioni planetarie}
+\title{Simulazione popolazioni planetarie: risultati mordasini 18}
 \date{\today}
 %%%
 %\outputonly{1}% output in pdf only page number
