main mordasini 18 results

--- a/main.tex
+++ b/main.tex
@@ -97,6 +97,15 @@
 	%\workpoutc
 	\fi
 \maketitle
+\begin{workout}[Mordasini18 MAIN RESULTS]
+\begin{itemize}
+\item Distribuzione massa pianeti: distribuzione bimodale con discrimine a $30\mearth{}$.
+\item Massa critica per accrescimento di gas
+\item distribuzione in semiassi che dipende da posizione iniziale embrione: necessity to include earlier planetary formation.  Preferred formation regions of planetesimal (Drazkowska16; brauer 08), particle pile-up outside orbits of already existing planets (Pinilla15), strong migration traps (Horn 12, Hasegawa Pudritz 12)
+\item frequency of giant, close-in and habitable planets. The high frequency of close-in planets can be reproduced assuming steep distribution of planetesimal and centrally concentrated (chiang laughlin 13, drazkowska 16)
+\item correlation with disk properties (mordasini 12a): metallicity effects (mortier13)
+\end{itemize}
+\end{workout}
 \pagenumbering{roman}
 \tableofcontents*
 \mainmatter
