--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -618,7 +618,8 @@ Seguendo (\cite{mordasini2012characterization}) la struttura del pianeta \'e det
 %&\TDy{r}{l}=0\\
 &\TDy{r}{P}=-\frac{Gm}{r^2}\rho\\
 &\TDy{r}{T}=\frac{T}{P}\TDy{r}{P}\nabla(T,P)\\
-&\nabla(T,P)=\TDly{P}{T}=\min{(\nad{},\nrad{})}
+&\nabla(T,P)=\TDly{P}{T}=\min{(\nad{},\nrad{})}\\
+&(\PDy{r}{l}=4\pi r^2\rho(\epsilon-P\PDy{t}{V}-\PDy{t}{u}))
 \end{align}
 dove $\nrad{}$ e $\nad{}$ indicano il gradiente radiativo e adiabatico.
 
