subsaturn mass desert

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\pdfminorversion=5
+ \pdfminorversion=5
 \pdfcompresslevel=9
 \pdfobjcompresslevel=2
 \documentclass[twoside,11pt,fleqn]{memoir}%%% seminario planetari PPS
@@ -100,10 +100,11 @@
 \begin{workout}[Mordasini18 MAIN RESULTS]
 \begin{itemize}
 \item Distribuzione massa pianeti: distribuzione bimodale con discrimine a $30\mearth{}$.
-\item Massa critica per accrescimento di gas
+\item Massa critica per accrescimento di gas: 
 \item distribuzione in semiassi che dipende da posizione iniziale embrione: necessity to include earlier planetary formation.  Preferred formation regions of planetesimal (Drazkowska16; brauer 08), particle pile-up outside orbits of already existing planets (Pinilla15), strong migration traps (Horn 12, Hasegawa Pudritz 12)
 \item frequency of giant, close-in and habitable planets. The high frequency of close-in planets can be reproduced assuming steep distribution of planetesimal and centrally concentrated (chiang laughlin 13, drazkowska 16)
 \item correlation with disk properties (mordasini 12a): metallicity effects (mortier13)
+\item Sub-saturn mass desert (ida lin 04) not seen in kepler data (Thompson 18): accretion of planetesimal slow down gas accretion
 \end{itemize}
 \end{workout}
 \pagenumbering{roman}
