logic on solid accretion to oligarchs

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -342,6 +342,12 @@ infrared excess: gail hoppe10
 \chapter{Schema di accrescimento componente solida}
 }
 
+\begin{workout}[allargamento schema accrescimento parte solida]
+	\begin{itemize}
+		\item 
+	\end{itemize}
+\end{workout}
+
 \begin{workout}[Refs GI vs CA]
 planetesimal hypothesis: chamberlin 05, Safronov 69, Hayashi 77. Formation on dynamical scale via GI: Kuiper 51, Cameron 62.
 Core accretion o instabilit\'a gravitazionale?
