--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -344,7 +344,8 @@ infrared excess: gail hoppe10
 
 \begin{workout}[allargamento schema accrescimento parte solida]
 	\begin{itemize}
-		\item 
+		\item peebles: observations show that mm and smaller particles are retained in PPD (Cleeves16). Peebles remain coupled to gad -> areodynamic assisted or peeble accretion (Ormel klahr 10, Lambrechts jOhansen 12)
+		
 	\end{itemize}
 \end{workout}
 
@@ -600,6 +601,12 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
 }% e fase isolata
+
+\begin{wordonframe}{Main point}
+\begin{itemize}
+\item timescale to accrete mass in runaway mode is shorter than disk timescale: planetary desert in $10-100\mearth{}$??
+\end{itemize}
+\end{wordonframe}
 
 \begin{wrapfigure}[15]{l}{0.5\textwidth}
 \includegraphics[trim={0cm 2cm 0 0},clip, keepaspectratio,width=0.48\textwidth]{massenvvscore}
