ensamble prooertues of exo

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -466,3 +466,5 @@ Architecture of planetary systems based om kepler data: number of planets and co
 Spacing Kepler planets (Wu Pu 15)
 Are planetary systems filled to capacity? (Fang Nargot 13)
 \end{workout}
+
+\section{Propriet\'a generali esopianeti}
