mi sono accorto che confondo metallicità pianeta e metallicità stellare

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -293,6 +293,14 @@ La distribuzione dei semi-assi cresce rapidamente tra $0.01-0.1\si{\astronomical
 
 Per confrontare una popolazione planetaria simulata con le osservazioni \'e opportuno, oltre a tenere conto dei bias osservativi, valutare per quali sottoinsiemi dell'ensamble di pianeti ossevati le approssimazioni fatte nel modello sono valide.
 
+\begin{workout}[Relazione $M_p$ vs $Z_p$]
+	contenu...
+\end{workout}
+
+\begin{workout}[Relazione $Z_*$ metallicit\'a GP]
+	contenu...
+\end{workout}
+
 \section{Struttura orbitale e tipo di pianeta}
 
 \begin{table}
