--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -2,6 +2,18 @@
 \chapter{Disco protoplanetario}
 }
 
+\begin{workout}[Some refs]
+\begin{itemize}
+\item Rafikov 05: Atmospheres of protoplanetary cores. Espressioni per $R_H$, $R_B$.
+\item shiraiashi ida 08:Infall of planetesimal onto growing giant planets. KH contraction timescale; accretion of planetesimal and contraction phase.
+\item Hasegawa Pudritz 13: Planetary population in mass-period diagram: a statistical treatment of exoplanet formation and role of planet traps.
+\item ida, guillot, morbidelli 08: accretion and destruction of planetesimal in turbulent disks.
+\item rafikov 04: Fast accretion of planetesimal by protoplanet cores. Drag regimes; mass spectrum of solid body
+\item rafikov 02: growth of planetary embryos: orderly, runaway, or oligarchic?
+\item kokubo ida 12: Dynamics and accretion of planetesimal. Tempi caratteristici.
+\item hasegawa pudritz 14: planet traps and planet cores: origin of planet metallicity correlation.
+\end{itemize}
+\end{workout}
 
 Il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 
