workout dubbi esistenzialio

--- a/main.tex
+++ b/main.tex
@@ -107,6 +107,12 @@
 \item Sub-saturn mass desert (ida lin 04) not seen in kepler data (Thompson 18): accretion of planetesimal slow down gas accretion
 \end{itemize}
 \end{workout}
+\begin{workout}[Dubbi esistenziali]
+\begin{itemize}
+\item Relazione metallicit\'a stellare $Z_*$ e frequenza pianeti (solo pianeti giganti?), relazione massa pianeta gigante $M_p$ massa metalli $M_Z$: la seconda dipende dalla prima?
+\item Esistenza fase 2 accrescimento quasi idrodinamico 
+\end{itemize}
+\end{workout}
 \pagenumbering{roman}
 \tableofcontents*
 \mainmatter
