Molecular clouds contraction into intro.main

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -4,6 +4,7 @@
 
 \begin{workout}[Some refs]
 \begin{itemize}
+\item Lamb 32: amount of energy converted in turbulent motion
 \item Rafikov 05: Atmospheres of protoplanetary cores. Espressioni per $R_H$, $R_B$.
 \item shiraiashi ida 08:Infall of planetesimal onto growing giant planets. KH contraction timescale; accretion of planetesimal and contraction phase.
 \item Hasegawa Pudritz 13: Planetary population in mass-period diagram: a statistical treatment of exoplanet formation and role of planet traps.
@@ -14,8 +15,6 @@
 \item hasegawa pudritz 14: planet traps and planet cores: origin of planet metallicity correlation.
 \end{itemize}
 \end{workout}
-
-Il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 
 %Jansky=10-23erg/(s*cm2*Hz)
 \begin{workout}[Refs dischi protoplanetari]
