--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,9 @@ La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata det
 
 \begin{workout}[Intro alla formazione planetaria e oggetto seminario: intro formazione sistema solare, esosistemi verso simulazioni formazione]
 % (\cite{lissauer1993planet}).
-L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene. Con l'accumularsi delle osservazioni l'ipotesi di formazione attraverso disco protoplanetario \'e stata confermata: la prima verifica a cui sono state sottoposte le teorie di formazione \'e il Sistem solare.
+L'ipotesi di formazione del sistema solare passando dallo stadio di nebulosa planetaria ha radici storiche che risalgono a prima dell'osservazione di stelle giovani e dell'interpretazione dello spettro di luce che da loro proviene.
+
+Il materiale presente nella regione instabile di una nube molecolare \'e dotato di momento angolare quindi accresce sulla massa della protostella centrale formando un disco ortogonale al momento totale della nube che trascurando l'effetto della pressione del gas, ruota con velocit\'a angolare kepleriana.
 A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari: \'e possibile una verifica dei meccanismi di formazione che prescinda dalle condizioni particolari di un singolo sistema.
 \end{workout}
 
