sposto modello disco protoplanetario in constrains

--- a/main.tex
+++ b/main.tex
@@ -155,7 +155,7 @@ Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi 
 Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci, sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera la frammentazione del disco protoplanetario per instabilit\'a gravitazionale e la condensazione della componente solida all'interno dei frammenti.
 
 Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante (\begin{workout}[cit osservazioni pro CA: lissauer 93 vs nayaskin16+ vs safronov 72]\end{workout}) per sistemi planetari attorno a stella singola di sequenza principale:
-\begin{workout}{Stella singola sequenza principale: limiti massa}
+\begin{workout}[Stella singola sequenza principale: limiti massa]
 	rapporto massa stella/pianeti (osservazioni gravitational lensing)
 \end{workout}
 \begin{itemize}
