1ch verso vncoli e condizioni nzisli

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,5 +1,5 @@
-  % trim={5cm 0 0 0},clip
-
+% trim={5cm 0 0 0},clip
+%vincoli e condizion iniziali per pps??
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
