workout disco protoplanetario in constrain condizioni iniziali

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -481,7 +481,13 @@ Are planetary systems filled to capacity? (Fang Nargot 13)
 	Chronology of  early stages: apai lauretta 10 (book)
 \end{workout}
 
-\section{Modello disco di accrescimento}
+\begin{workout}[Condizioni iniziali: formazione planetesimi, caratteristiche dischi protoplanetari]
+	Chronology of  early stages: apai lauretta 10 (book)
+\end{workout}
+
+{\let\clearpage\relax\let\cleardoublepage\relax
+\chapter{Modello disco di accrescimento}
+}
 
 Nei modelli unidimensionali per disco di accrescimento si descrive il trasporto di momento angolare verso l'esterno introducendo la viscosit\'a aumentata $\nu=\frac{\eta}{\rho}\to\alpha c_s H$: giustifico euristicamente la parametrizzazione della viscosit\'a del disco di accrescimento in analogia alla viscosit\'a molecolare (\cite{bouvier2002theory}).
 
