rivedo PFMconstraints con workout di quello che voglio dire

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,3 +1,14 @@
+\begin{workout}[vincoli e condizioni iniziali: less modell dependent that I can]
+\begin{itemize}
+SISTEMA SOLARE
+\item Datazione: tempi scala formazione
+\item struttura orbitale e composizione sistema solare: MMSN
+ESOPIANETI
+\item diversity: distribuzione di massa-distribuzione bimodale per piccole/grandi masse con minimo a $30\mearth$, crescita esponenziale a basse masse, secondo picco a masse gioviane, distribuzione raggio/densit\'a: eos, evaporazione, composizione
+
+
+\end{itemize}
+\end{workout}
 % trim={5cm 0 0 0},clip
 %vincoli e condizion iniziali per pps??
 {\let\clearpage\relax\let\cleardoublepage\relax
