ca vs gi after mmsn?

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -3,6 +3,7 @@
 SISTEMA SOLARE
 \item Datazione: tempi scala formazione
 \item struttura orbitale e composizione sistema solare: MMSN
+\item intro CA vs GI
 ESOPIANETI
 \item diversity: distribuzione di massa-distribuzione bimodale per piccole/grandi masse con minimo a $30\mearth$, crescita esponenziale a basse masse, secondo picco a masse gioviane, distribuzione raggio/densit\'a: eos, evaporazione, composizione
 
