--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,13 +1,11 @@
 \begin{workout}[vincoli e condizioni iniziali: less modell dependent that I can]
 \begin{itemize}
-SISTEMA SOLARE
-\item Datazione: tempi scala formazione
-\item struttura orbitale e composizione sistema solare: MMSN
-\item intro CA vs GI
-ESOPIANETI
-\item diversity: distribuzione di massa-distribuzione bimodale per piccole/grandi masse con minimo a $30\mearth$, crescita esponenziale a basse masse, secondo picco a masse gioviane, distribuzione raggio/densit\'a: eos, evaporazione, composizione
-
-
+\item SISTEMA SOLARE
+\item[-] Datazione: tempi scala formazione
+\item[-] struttura orbitale e composizione sistema solare: MMSN
+\item[-] intro CA vs GI
+\item ESOPIANETI
+\item[-] diversity: distribuzione di massa-distribuzione bimodale per piccole/grandi masse con minimo a $30\mearth$, crescita esponenziale a basse masse, secondo picco a masse gioviane, distribuzione raggio/densit\'a: eos, evaporazione, composizione
 \end{itemize}
 \end{workout}
 % trim={5cm 0 0 0},clip
