anche teoria è vincolo?

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -427,7 +427,7 @@ fonti energia: tidal heating radiogeninc heat, star flux
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Evoluzione orbite proto-pianeti: migrazione planetaria.}
+\chapter{Evoluzione orbite proto-pianeti: migrazione planetaria (e N-body integrator: implementazione; la parte di teoria nella prima parte dei vincoli e l'implementazione dell'integratore nell seconda parte?).}
 }
 
 \begin{wrapfigure}[10]{l}{0.5\textwidth}
