nei constrain le osservazioni sui dischi: ma non teoria migrazione (??); result m18 pg 23, 24, 27

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -1,10 +1,5 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Disco protoplanetario}
-}
-
-
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Schema di accrescimento componente solida}
+\chapter{Schema di accrescimento componente solida: formazione planetesimi}
 }
 
 \begin{workout}[Some refs]
